--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "repos",
+  "name": "chat",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "directories": {
-    "test": "test"
+    "lib": "lib"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -13,20 +13,22 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/node": "^10.12.12",
-    "@types/react": "^16.7.13",
-    "@types/react-dom": "^16.0.11",
+    "@types/node": "^10.10.1",
+    "@types/react": "^16.4.14",
+    "@types/react-dom": "^16.0.7",
     "@types/ws": "^6.0.1",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
-    "ws": "^6.1.2"
+    "react": "^16.5.1",
+    "react-dom": "^16.5.1",
+    "ws": "^6.0.0"
   },
   "devDependencies": {
-    "browserify": "^16.2.3",
+    "browserify": "^16.2.2",
     "gulp": "^3.9.1",
     "gulp-sourcemaps": "^2.6.4",
-    "gulp-typescript": "^5.0.0",
+    "gulp-typescript": "^5.0.0-alpha.3",
     "gulp-uglify": "^3.0.1",
-    "tsify": "^4.0.1"
+    "tsify": "^4.0.0",
+    "typescript": "^3.0.3",
+    "vinyl-source-stream": "^2.0.0"
   }
 }
